--- a/src/UI/Logo.module.css
+++ b/src/UI/Logo.module.css
@@ -11,6 +11,32 @@
 .logoText
 {
     position: absolute;
-    font-size: 4rem;
+    font-size: 2.5rem;
     font-weight: 300;
+}
+
+.logoImage
+{
+    max-width: 80%;
+}
+
+@media screen and (min-width:321px) {
+    .logoText
+    {
+        font-size: 3rem;
+    }
+}
+
+@media screen and (min-width:376px){
+    .logoText
+    {
+        font-size: 3.5rem;
+    }
+}
+
+@media screen and (min-width:426px){
+    .logoText
+    {
+        font-size: 4rem;
+    }
 }
