--- a/src/components/ProductsComponents/SingleProduct.module.css
+++ b/src/components/ProductsComponents/SingleProduct.module.css
@@ -1,8 +1,8 @@
-.header
+.itemsHeader
 {
-    text-align: center;
-    font-size: 1.3rem;
-    margin-bottom: 1.2rem;
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-bottom: 0.6rem;
 }
 
 .text
@@ -21,9 +21,9 @@
 
 .imageContainer img
 {
-    -webkit-box-shadow: 0px 0px 8px 1px rgb(168, 168, 168);
-    -moz-box-shadow: 0px 0px 8px 1px rgb(168, 168, 168);
-    box-shadow: 0px 0px 8px 1px rgb(168, 168, 168);
+    -webkit-box-shadow: 0px 0px 8px 1px rgb(227, 227, 227);
+    -moz-box-shadow: 0px 0px 8px 1px rgb(227, 227, 227);
+    box-shadow: 0px 0px 8px 1px rgb(227, 227, 227);
     border-radius: 10px;
     max-width: 100%;
 }
@@ -37,23 +37,16 @@
     }
 }
 
-@media screen and (min-width:426px) {
-    .header
-    {
-        font-size: 1.8rem;
-    }
-}
-
 @media screen and (min-width:551px)
 {
+    .itemsHeader
+    {
+        font-size: 1.7rem;
+    }
+
     .text
     {
         margin:1.3rem 0;
-    }
-
-    .header
-    {
-        margin-bottom: 1.3rem;
     }
 
     .imageContainer img
@@ -63,36 +56,40 @@
 }
 
 @media screen and (min-width:769px)
-{  
+{
+    .itemsHeader
+    {
+        font-size: 1.8rem;
+    }
+
     .text
     {
         margin: 1.4rem 0;
         font-size: 1.2rem;
     }
-
-    .header
-    {
-        font-size: 2.4rem;
-        margin-bottom: 1.4rem;
-    }
 }
 
 @media screen and (min-width:1025px)
 {
+    .itemsHeader
+    {
+        font-size: 2.3rem;
+    }
+
     .text
     {
         margin: 1.5rem 0;
         font-size: 1.3rem;
     }
-
-    .header
-    {
-        margin-bottom: 1.5rem;
-    }
 }
 
 @media screen and (min-width:1201px)
 {
+    .itemsHeader
+    {
+        font-size: 2.5rem;
+    }
+
     .text
     {
         font-size: 1.4rem;
@@ -101,6 +98,11 @@
 
 @media screen and (min-width:1501px)
 {
+    .itemsHeader
+    {
+        font-size: 2.8rem;
+    }
+
     .text
     {
         font-size: 1.5rem;
