--- a/src/components/NavigationComponents/Navbar.module.css
+++ b/src/components/NavigationComponents/Navbar.module.css
@@ -26,6 +26,7 @@
 .navbar a,
 .navbar a:hover,
 .navbar a:visited,
+.navbar span,
 .tagger
 {
   display: none;
@@ -77,7 +78,9 @@
 @media screen and (min-width: 769px) {
   .navbar a,
   .navbar a:hover,
-  .navbar a:visited {
+  .navbar a:visited,
+  .navbar span
+  {
     display: block;
     color: rgb(255, 255, 255);
     font-size: 1.1rem;
@@ -115,6 +118,11 @@
     transition: margin-left 0.3s ease-out, width 0.3s ease-out;
   }
 
+  .navbar span
+  {
+    cursor: pointer;
+  }
+
   .position1
   {
       margin-left: 8rem;
@@ -133,6 +141,11 @@
   .position4
   {
       margin-left: 23rem;
+  }
+
+  .position5
+  {
+    margin-left: 28rem;
   }
 
   .position0,
@@ -160,6 +173,18 @@
   .linksContainer a:nth-child(6)
   {
     width: 5rem;
+  }
+
+  .position5,
+  .linksContainer a:nth-child(7)
+  {
+    width: 6.5rem;
+  }
+
+  .position5.logout,
+  .navbar span
+  {
+    width:5rem;
   }
 
 }
