Add wave to page background

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 :root{
   --color-primary: #a45d15;
   --color-secondary: #b38664;
-  --color-background: #FFF7EF;
+  --color-background: #fff1e6;
+  --color-background-secondary: #ffead5;
   --color-separator: #DFE0DF;
-  --color-primary-text: #313f53;
+  --color-primary-text: hsl(215, 26%, 26%);
 }
 
 body {
