Change secondary color

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root{
   --color-primary: #a45d15;
-  --color-secondary: #b38664;
+  --color-secondary: #b77c4f;
   --color-background: #fff1e6;
   --color-background-secondary: #ffeddb;
   --color-separator: #DFE0DF;
